test/files/neg/t2462c.check
t2462c.scala:26: error: No C of X$Y
  f[X$Y]
   ^
t2462c.scala:32: error: No C of Foo[Int]
  f[Foo[Int]]
   ^
t2462c.scala:35: error: No C of Foo[Int]
  g[Foo[Int]]
   ^
t2462c.scala:38: error: I see no C[Foo[Int]]
  h[Foo[Int]]
   ^
t2462c.scala:42: error: String List [?T0, ZZ] -> List[C[_]] Int Option[Long] -- .
  i.m[Option[Long]]
     ^
5 errors
